--- a/src/stylesheet/Pokemon.scss
+++ b/src/stylesheet/Pokemon.scss
@@ -1,4 +1,5 @@
 .card {
+  min-width: 170px;
   display: flex;
   flex-direction: column;
   border: 1px solid whitesmoke;
@@ -11,4 +12,6 @@
 .types {
   border: 1px solid lightgrey;
   margin: 3px;
+  padding-right: 2px;
+  padding-bottom: 2px;
 }
